Revise publications.html with new entries and metrics
Updated the publications page with new articles and research metrics.

--- a/publications.html
+++ b/publications.html
@@ -1,18 +1,114 @@
-
-<html><head><link rel="stylesheet" href="assets/style.css"></head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Publications | Sidharth Samal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+<body>
 
 <nav>
   <a href="index.html">Home</a>
   <a href="research.html">Research</a>
-  <a href="publications.html">Publications</a>
+  <a href="publications.html" class="active">Publications</a>
   <a href="teaching.html">Teaching</a>
   <a href="contact.html">Contact</a>
 </nav>
 <hr>
 
 <h1>Publications</h1>
-<p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en">Profile Link</a></p>
+
+<p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Profile Link</a></p>
+
+<h2>Journal Articles</h2>
 <ol>
-<li>List your publications here.</li>
+  <li>
+    Samal, S., &amp; Dash, R. (2025). Developing a two stage optimized random vector functional link neural network based predictor model utilizing a swift crow search algorithm. 
+    <em>Cluster Computing</em>, 28(3), 161. 
+    <strong>SCIE</strong>, 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2023). Developing a novel stock index trend predictor model by integrating multiple criteria decision-making with an optimized online sequential extreme learning machine. 
+    <em>Granular Computing</em>, 8(3), 411–440. 
+    <strong>ESCI</strong>, 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2022). A Novel MCDM Ensemble Approach of Designing an ELM-Based Predictor for Stock Index Price Forecasting. 
+    <em>Intelligent Decision Technologies</em>, 16(2), 387–406. 
+    <strong>ESCI</strong>, 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2021). A TOPSIS-ELM framework for stock index price movement prediction. 
+    <em>Intelligent Decision Technologies</em>, 15(2), 201–220. 
+    <strong>ESCI</strong>, 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Dash, R., Samal, S., Dash, R., &amp; Rautray, R. (2019). An integrated TOPSIS crow search-based classifier ensemble: In application to stock index price movement prediction. 
+    <em>Applied Soft Computing</em>, 85, 105784. 
+    <strong>SCIE</strong>, 
+    <a href="#" target="_blank">DOI</a>
+  </li>
 </ol>
-</body></html>
+
+<h2>Conference Proceedings</h2>
+<ol>
+  <li>
+    Samal, S., &amp; Dash, R. (2022). Stock Index Movement Prediction: A Crow Search-ELM Approach. 
+    In <em>Innovation in Electrical Power Engineering, Communication, and Computing Technology</em>, pp. 349–356. Springer, Singapore. 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2022). An Empirical Comparison of TOPSIS and VIKOR for Ranking Decision-Making Models. 
+    In <em>Intelligent and Cloud Computing</em>, pp. 429–437. Springer, Singapore. 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2021). A TWV Classifier Ensemble Framework. 
+    In <em>Intelligent and Cloud Computing</em>, 255–262. Springer, Singapore. 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Samal, S., &amp; Dash, R. (2021). A Hybrid Fruit Fly ELM Framework for Stock Index Price Movement Prediction. 
+    In <em>2021 International Conference on Advances in Power, Signal, and Information Technology (APSIT)</em>, pp. 1–5. IEEE. 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+  <li>
+    Dash, R., Samal, S., Rautray, R., &amp; Dash, R. (2019). A TOPSIS approach of ranking classifiers for stock index price movement prediction. 
+    In <em>Soft Computing in Data Analytics: Proceedings of International Conference on SCDA 2018</em>, pp. 665–674. Springer, Singapore. 
+    <a href="#" target="_blank">DOI</a>
+  </li>
+</ol>
+
+<h2>Research Metrics <small>(Updated: September 2025)</small></h2>
+<ul>
+  <li><strong>h-Index:</strong> 6</li>
+  <li><strong>i10-Index:</strong> 3</li>
+  <li><strong>Citations:</strong> 136</li>
+</ul>
+
+<hr>
+
+<footer>
+  <p><strong>Last updated on 8th September 2025</strong></p>
+  <p>
+    <strong>Sidharth Samal</strong><br>
+    ML Researcher | Assistant Professor<br>
+    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+  </p>
+  <p>
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
+    <a href="#" target="_blank">Scopus</a> |
+    <a href="#" target="_blank">ResearchGate</a> |
+    <a href="#" target="_blank">ORCID</a> |
+    <a href="#" target="_blank">WoS</a>
+  </p>
+</footer>
+
+</body>
+</html>
