Update citations count and LinkedIn profile link

--- a/publications.html
+++ b/publications.html
@@ -88,7 +88,7 @@
 <ul>
   <li><strong>h-Index:</strong> 6</li>
   <li><strong>i10-Index:</strong> 3</li>
-  <li><strong>Citations:</strong> 136</li>
+  <li><strong>Citations:</strong> 142</li>
 </ul>
 
 <hr>
@@ -101,7 +101,7 @@
     <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
   </p>
   <p>
-    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
+    <a href="https://www.linkedin.com/in/sidharthsamal" target="_blank">LinkedIn</a> |
     <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
     <a href="#" target="_blank">Scopus</a> |
     <a href="#" target="_blank">ResearchGate</a> |
