modified every webpage

--- a/research.html
+++ b/research.html
@@ -1,9 +1,16 @@
-
-<html><head><link rel="stylesheet" href="assets/style.css"></head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Research | Sidharth Samal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+<body>
 
 <nav>
   <a href="index.html">Home</a>
-  <a href="research.html">Research</a>
+  <a href="research.html" class="active">Research</a>
   <a href="publications.html">Publications</a>
   <a href="teaching.html">Teaching</a>
   <a href="contact.html">Contact</a>
@@ -11,5 +18,61 @@
 <hr>
 
 <h1>Research</h1>
-<p>Areas of focus include predictive modeling, optimization strategies, and AI for healthcare decision support.</p>
-</body></html>
+
+<h2>Ph.D. Dissertation (2019–2025)</h2>
+<p><strong>Title:</strong> Financial Time-Series Analysis: An Integrated Machine Learning-MCDM Approach</p>
+<ul>
+  <li>Developed a <strong>two-stage feature selection framework</strong> → reduced prediction error by <strong>40%</strong> and dimensionality by <strong>35%</strong>.</li>
+  <li>Proposed a <strong>novel neural weight optimization</strong> using Swift Crow Search → <strong>30% error reduction</strong> in financial forecasting.</li>
+  <li>Analyzed activation functions' impact on convergence in financial neural networks.</li>
+  <li>Applied gene feature selection and transfer learning for <strong>brain MRI cancer diagnosis</strong>.</li>
+</ul>
+
+<h2>M.Tech. Dissertation (2016–2018)</h2>
+<p><strong>Title:</strong> A TOPSIS Approach of Base Classifier Selection for Crow Search-Based Ensemble</p>
+<ul>
+  <li>Designed <strong>optimized weighted MCDM ensemble</strong> for stock index trend prediction.</li>
+  <li>Introduced <strong>novel weighted voting</strong> for improved financial decision-making.</li>
+</ul>
+
+<h2>Current Research Projects</h2>
+<ul>
+  <li>
+    <strong>ML in Healthcare:</strong> Novel frameworks for disease prediction using MRI data with dimensionality reduction and transfer learning.
+  </li>
+  <li>
+    <strong>MCDM + Evolutionary Algorithms in Finance:</strong> Enhancing stock trend prediction via optimized neural networks and hybrid feature selection.
+  </li>
+</ul>
+
+<h2>Research Domains</h2>
+<ul>
+  <li>Predictive Modeling</li>
+  <li>Evolutionary Optimization (Crow Search, Fruit Fly)</li>
+  <li>Multi-Criteria Decision Making (TOPSIS, VIKOR)</li>
+  <li>Extreme Learning Machines (ELM, OS-ELM, RVFL)</li>
+  <li>Deep Learning & Computer Vision</li>
+  <li>Time-Series Forecasting</li>
+</ul>
+
+<hr>
+
+<footer>
+  <p><strong>Last updated on 8th September 2025</strong></p>
+  <p>
+    <strong>Sidharth Samal</strong><br>
+    ML Researcher | Assistant Professor<br>
+    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+  </p>
+  <p>
+    <a href="#" target="_blank">LinkedIn</a> |
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
+    <a href="#" target="_blank">Scopus</a> |
+    <a href="#" target="_blank">ResearchGate</a> |
+    <a href="#" target="_blank">ORCID</a> |
+    <a href="#" target="_blank">WoS</a>
+  </p>
+</footer>
+
+</body>
+</html>
