--- a/teaching.html
+++ b/teaching.html
@@ -1,15 +1,68 @@
-
-<html><head><link rel="stylesheet" href="assets/style.css"></head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact | Sidharth Samal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+<body>
 
 <nav>
   <a href="index.html">Home</a>
   <a href="research.html">Research</a>
   <a href="publications.html">Publications</a>
   <a href="teaching.html">Teaching</a>
-  <a href="contact.html">Contact</a>
+  <a href="contact.html" class="active">Contact</a>
 </nav>
 <hr>
 
-<h1>Teaching</h1>
-<p>Courses taught or currently offering can be listed here.</p>
-</body></html>
+<h1>Contact</h1>
+
+<div style="max-width: 600px; margin: 0 auto; line-height: 1.8;">
+  <p><strong>Sidharth Samal</strong><br>
+  Assistant Professor<br>
+  School of Engineering and Sciences (SEAS)<br>
+  SRM University-AP, Andhra Pradesh, India</p>
+
+  <p><strong>Email:</strong> <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a><br>
+  <strong>Phone:</strong> +91-898-444-5349</p>
+
+  <h2>Connect With Me</h2>
+  <p>
+    <a href="#" target="_blank">LinkedIn</a> &nbsp; | &nbsp;
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> &nbsp; | &nbsp;
+    <a href="#" target="_blank">Scopus</a> &nbsp; | &nbsp;
+    <a href="#" target="_blank">ResearchGate</a> &nbsp; | &nbsp;
+    <a href="#" target="_blank">ORCID</a> &nbsp; | &nbsp;
+    <a href="#" target="_blank">Web of Science</a>
+  </p>
+
+  <h2>Office Location</h2>
+  <p>Room XXX, SEAS Building<br>
+  SRM University-AP<br>
+  Neerukonda, Mangalagiri Mandal<br>
+  Guntur District, Andhra Pradesh 522240</p>
+</div>
+
+<hr>
+
+<footer>
+  <p><strong>Last updated on 8th September 2025</strong></p>
+  <p>
+    <strong>Sidharth Samal</strong><br>
+    ML Researcher | Assistant Professor<br>
+    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+  </p>
+  <p>
+    <a href="#" target="_blank">LinkedIn</a> |
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
+    <a href="#" target="_blank">Scopus</a> |
+    <a href="#" target="_blank">ResearchGate</a> |
+    <a href="#" target="_blank">ORCID</a> |
+    <a href="#" target="_blank">WoS</a>
+  </p>
+</footer>
+
+</body>
+</html>
