--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-
-<html><head><link rel="stylesheet" href="assets/style.css"></head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home | Sidharth Samal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+<body>
 
 <nav>
-  <a href="index.html">Home</a>
+  <a href="index.html" class="active">Home</a>
   <a href="research.html">Research</a>
   <a href="publications.html">Publications</a>
   <a href="teaching.html">Teaching</a>
@@ -11,7 +18,55 @@
 <hr>
 
 <h1>Sidharth Samal</h1>
-<p>Assistant Professor<br>Department of CSE, SRM University-AP</p>
-<p><strong>Research Areas:</strong> Predictive Machine Learning, Evolutionary Optimization, Healthcare AI</p>
-<p>Welcome to my academic homepage. I focus on developing data-driven and intelligent systems for predictive modeling and healthcare applications.</p>
-</body></html>
+<p><strong>ML Researcher | Assistant Professor</strong></p>
+<p><em>AI for Predictive Modeling, Financial Forecasting, and Healthcare Diagnostics</em></p>
+
+<h2>About Me</h2>
+<p>
+  I am an Assistant Professor at SRM University-AP with a Ph.D. in Computer Science and Engineering from Siksha ‘O’ Anusandhan University (2025). 
+  My research focuses on integrating <strong>Machine Learning, Multi-Criteria Decision Making (MCDM)</strong>, and <strong>Evolutionary Algorithms</strong> for 
+  financial time-series forecasting and medical image analysis.
+</p>
+<p>
+  I have developed novel hybrid models that reduce forecasting errors by up to <strong>40%</strong> and published in SCIE/ESCI journals such as 
+  <em>Cluster Computing</em> and <em>Applied Soft Computing</em>.
+</p>
+
+<h2>Research Interests</h2>
+<ul>
+  <li>Predictive Modeling & Financial Time-Series Analysis</li>
+  <li>Neural Architecture Optimization using Metaheuristics</li>
+  <li>AI in Healthcare: MRI-based Cancer Detection</li>
+  <li>Ensemble Learning with MCDM Weighting</li>
+  <li>Transfer Learning & Dimensionality Reduction</li>
+</ul>
+
+<h2>Quick Links</h2>
+<ul>
+  <li><a href="publications.html">Publications (h-index: 6, 136+ citations)</a></li>
+  <li><a href="research.html">Current Research Projects</a></li>
+  <li><a href="teaching.html">Courses Taught</a></li>
+  <li><a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a></li>
+</ul>
+
+<hr>
+
+<footer>
+  <p><strong>Last updated on 8th September 2025</strong></p>
+  <p>
+    <strong>Sidharth Samal</strong><br>
+    ML Researcher | Assistant Professor<br>
+    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+  </p>
+  <p>
+    <a href="#" target="_blank">LinkedIn</a> |
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
+    <a href="#" target="_blank">Scopus</a> |
+    <a href="#" target="_blank">ResearchGate</a> |
+    <a href="#" target="_blank">ORCID</a> |
+    <a href="#" target="_blank">WoS</a>
+  </p>
+</footer>
+
+</body>
+</html>
