--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
   <p>
     <strong>Sidharth Samal</strong><br>
     ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a> | +91-898-444-5349
   </p>
   <p>
     <a href="#" target="_blank">LinkedIn</a> |
