--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact | Sidharth Samal</title>
+  <title>Teaching | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
@@ -12,38 +12,57 @@
   <a href="index.html">Home</a>
   <a href="research.html">Research</a>
   <a href="publications.html">Publications</a>
-  <a href="teaching.html">Teaching</a>
-  <a href="contact.html" class="active">Contact</a>
+  <a href="teaching.html" class="active">Teaching</a>
+  <a href="contact.html">Contact</a>
 </nav>
 <hr>
 
-<h1>Contact</h1>
+<h1>Teaching</h1>
 
-<div style="max-width: 600px; margin: 0 auto; line-height: 1.8;">
-  <p><strong>Sidharth Samal</strong><br>
-  Assistant Professor<br>
-  School of Engineering and Sciences (SEAS)<br>
-  SRM University-AP, Andhra Pradesh, India</p>
+<h2>Current Position</h2>
+<p><strong>Assistant Professor</strong><br>
+SEAS, SRM University-AP, Andhra Pradesh<br>
+<em>July 2025 – Present</em></p>
+<ul>
+  <li><strong>Course Taught:</strong> Deep Learning (CSE 457)</li>
+</ul>
 
-  <p><strong>Email:</strong> <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a><br>
-  <strong>Phone:</strong> +91-898-444-5349</p>
+<h2>Previous Teaching Experience</h2>
 
-  <h2>Connect With Me</h2>
-  <p>
-    <a href="#" target="_blank">LinkedIn</a> &nbsp; | &nbsp;
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">Scopus</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">ResearchGate</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">ORCID</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">Web of Science</a>
-  </p>
+<h3>Assistant Professor</h3>
+<p>ASET, Amity University Rajasthan, Jaipur<br>
+<em>April 2025 – July 2025</em></p>
+<ul>
+  <li>Teaching: Machine Learning, Deep Learning</li>
+  <li>Curriculum development and student mentoring</li>
+  <li>Hands-on labs in predictive modeling</li>
+</ul>
 
-  <h2>Office Location</h2>
-  <p>Room XXX, SEAS Building<br>
-  SRM University-AP<br>
-  Neerukonda, Mangalagiri Mandal<br>
-  Guntur District, Andhra Pradesh 522240</p>
-</div>
+<h3>Teaching Assistant</h3>
+<p>ITER, Siksha ‘O’ Anusandhan University, Odisha<br>
+<em>March 2019 – March 2022</em></p>
+<ul>
+  <li>Assisted in core Computer Science courses</li>
+  <li>Conducted lab sessions and graded assignments</li>
+  <li>Mentored <strong>15+ undergraduate research projects</strong> in AI/ML</li>
+  <li>Designed hands-on experiments in optimization and machine learning</li>
+</ul>
+
+<h2>Faculty Development Programs (FDPs)</h2>
+<ul>
+  <li>
+    <strong>June 2025:</strong> “AI-Powered Tools for Academic Research Writing” – Amity University Rajasthan
+  </li>
+  <li>
+    <strong>May 2025:</strong> “Research Insights into ML, DL, and Neural Networks” – Amity University Rajasthan
+  </li>
+</ul>
+
+<h2>Teaching Philosophy</h2>
+<p>
+  I emphasize <strong>hands-on learning</strong>, <strong>real-world applications</strong>, and <strong>critical thinking</strong>. 
+  My labs integrate coding, visualization, and model interpretation to prepare students for industry and research.
+</p>
 
 <hr>
 
