modified index, research, contact

--- a/contact.html
+++ b/contact.html
@@ -52,15 +52,15 @@
   <p>
     <strong>Sidharth Samal</strong><br>
     ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a> | +91-898-444-5349
+    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
   </p>
   <p>
-    <a href="#" target="_blank">LinkedIn</a> |
+    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
     <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="#" target="_blank">Scopus</a> |
-    <a href="#" target="_blank">ResearchGate</a> |
-    <a href="#" target="_blank">ORCID</a> |
-    <a href="#" target="_blank">WoS</a>
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
+    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
+    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
+    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
   </p>
 </footer>
 
