--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
 
 <h1>Research</h1>
 
-<h2>Ph.D. Dissertation (2019–2025)</h2>
+<h2>Ph.D. Dissertation</h2>
 <p><strong>Title:</strong> Financial Time-Series Analysis: An Integrated Machine Learning-MCDM Approach</p>
 <ul>
   <li>Developed a <strong>two-stage feature selection framework</strong> → reduced prediction error by <strong>40%</strong> and dimensionality by <strong>35%</strong>.</li>
@@ -28,7 +28,7 @@
   <li>Applied gene feature selection and transfer learning for <strong>brain MRI cancer diagnosis</strong>.</li>
 </ul>
 
-<h2>M.Tech. Dissertation (2016–2018)</h2>
+<h2>M.Tech. Dissertation</h2>
 <p><strong>Title:</strong> A TOPSIS Approach of Base Classifier Selection for Crow Search-Based Ensemble</p>
 <ul>
   <li>Designed <strong>optimized weighted MCDM ensemble</strong> for stock index trend prediction.</li>
@@ -48,11 +48,12 @@
 <h2>Research Domains</h2>
 <ul>
   <li>Predictive Modeling</li>
-  <li>Evolutionary Optimization (Crow Search, Fruit Fly)</li>
+  <li>Evolutionary Optimization</li>
   <li>Multi-Criteria Decision Making (TOPSIS, VIKOR)</li>
-  <li>Extreme Learning Machines (ELM, OS-ELM, RVFL)</li>
+  <li>Lightweight Neural Networks</li>
   <li>Deep Learning & Computer Vision</li>
   <li>Time-Series Forecasting</li>
+  <li>Healthcare Diagnostics using AI</li>
 </ul>
 
 <hr>
@@ -62,7 +63,7 @@
   <p>
     <strong>Sidharth Samal</strong><br>
     ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
   </p>
   <p>
     <a href="#" target="_blank">LinkedIn</a> |
