modified index, research, contact

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <!-- Google tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-1N6YKKLNPB');
+  </script>
+
 </head>
 <body>
 
@@ -20,7 +29,10 @@
 <h1>Sidharth Samal</h1>
 <p><strong>ML Researcher | Assistant Professor</strong></p>
 <p><em>AI for Predictive Modeling, Financial Forecasting, and Healthcare Diagnostics</em></p>
-
+<figure>
+  <img src="assets/images/profile.jpg" alt="Sidharth Samal, Assistant Professor in ML" width="300" height="300">
+  <figcaption>ML Researcher | Assistant Professor</figcaption>
+</figure>
 <h2>About Me</h2>
 <p>
   I am an Assistant Professor at SRM University-AP with a Ph.D. in Computer Science and Engineering from Siksha ‘O’ Anusandhan University (2025). 
