--- a/teaching.html
+++ b/teaching.html
@@ -82,12 +82,12 @@ SEAS, SRM University-AP, Andhra Pradesh<br>
     <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
   </p>
   <p>
-    <a href="#" target="_blank">LinkedIn</a> |
+    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
     <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="#" target="_blank">Scopus</a> |
-    <a href="#" target="_blank">ResearchGate</a> |
-    <a href="#" target="_blank">ORCID</a> |
-    <a href="#" target="_blank">WoS</a>
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
+    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
+    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
+    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
   </p>
 </footer>
 
