added connect links for social profiles

--- a/contact.html
+++ b/contact.html
@@ -33,17 +33,17 @@
   School of Engineering and Sciences (SEAS)<br>
   SRM University-AP, Andhra Pradesh, India</p>
 
-  <p><strong>Email:</strong> <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a><br>
-  <strong>Phone:</strong> +91-898-444-5349</p>
+  <p><strong>Email:</strong> <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a><br>
+  <strong>Phone:</strong> +91-xxx-xxx-xxxx</p>
 
   <h2>Connect With Me</h2>
   <p>
-    <a href="#" target="_blank">LinkedIn</a> &nbsp; | &nbsp;
+    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> &nbsp; | &nbsp;
     <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">Scopus</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">ResearchGate</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">ORCID</a> &nbsp; | &nbsp;
-    <a href="#" target="_blank">Web of Science</a>
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> &nbsp; | &nbsp;
+    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> &nbsp; | &nbsp;
+    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> &nbsp; | &nbsp;
+    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">Web of Science</a>
   </p>
 
   <h2>Office Location</h2>
