--- a/teaching.html
+++ b/teaching.html
@@ -79,7 +79,7 @@ SEAS, SRM University-AP, Andhra Pradesh<br>
   <p>
     <strong>Sidharth Samal</strong><br>
     ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharthsamal95@gmail.com">sidharthsamal95@gmail.com</a> | +91-898-444-5349
+    <a href="mailto:sidharthsamal95@gmail.com">sidharth.s@srmap.edu.in</a>
   </p>
   <p>
     <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
