added connect links for social profiles

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 <h2>About Me</h2>
 <p>
   I am an Assistant Professor at SRM University-AP with a Ph.D. in Computer Science and Engineering from Siksha ‘O’ Anusandhan University (2025). 
-  My research focuses on integrating <strong>Machine Learning, Multi-Criteria Decision Making (MCDM)</strong>, and <strong>Evolutionary Algorithms</strong> for 
-  financial time-series forecasting and medical image analysis.
+  My research focuses on <strong>Machine Learning, Multi-Criteria Decision Making (MCDM)</strong>, and <strong>Evolutionary Algorithms</strong>.
 </p>
 <p>
   I have developed novel hybrid models that reduce forecasting errors by up to <strong>40%</strong> and published in SCIE/ESCI journals such as 
