--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
   <title>Publications | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
   <!-- Google tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
